# nightshift

./: .gitignore  README.md  demo.py  pyproject.toml  research_demo.py
docs/: architecture.md  waste-analysis.md
docs/plans/: 2026-03-29-nightshift-build-plan.md
nightshift/: __init__.py  dispatch.py  engine.py  loop.py  utils.py
nightshift/agents/: base.py  research.py
nightshift/compression/: models.py  pipeline.py  reranker.py  summarizer.py
nightshift/economics/: bandit.py  tracker.py
nightshift/history/: knowledge.py  window.py
nightshift/routing/: confidence.py  dedup.py
tests/: conftest.py  test_bandit.py  test_confidence.py  test_confidence_local.py  test_dedup.py  test_dispatch.py  test_e2e.py  test_engine.py  test_ingest.py  test_loop.py  test_model_pool.py  test_reranker.py  test_summarizer.py  test_tracker.py  test_utils.py  test_window.py  test_wrap.py
