[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nightshift-runtime"
version = "0.1.0"
description = "Agent runtime that makes autonomous AI research 10x cheaper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Shifat Islam Santo", email = "shifatislamsanto764@gmail.com" },
]
keywords = ["ai", "agents", "llm", "token-optimization", "research", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
    "tiktoken>=0.7",
    "numpy>=1.26",
    "onnxruntime>=1.19",
    "chromadb>=0.5",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
local = [
    "transformers>=4.45",
    "sentence-transformers>=3.0",
    "gliner>=0.2",
    "docling>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/oneKn8/nightshift"
Repository = "https://github.com/oneKn8/nightshift"
Issues = "https://github.com/oneKn8/nightshift/issues"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
